<resources>
    <string name="app_name">PsychScribe</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="forget_pass_sign">\?</string>
    <string name="login">Login</string>
    <string name="dont_have_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="register">Register</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="sign_in">Sign In</string>
    <string name="add_patient">Add Patient</string>
    <string name="search">Search</string>
    <string name="monthly">Monthly</string>
    <string name="purchase_now">Purchase Now</string>
    <string name="dummy">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</string>
    <string name="next">Next</string>
    <string name="done">Done</string>
    <string name="sure_logout">Are you sure want to logout?</string>
    <string name="intack_date">Intack Date</string>
    <string name="person">Person</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="middle_initial">Middle Initial</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="address">Address</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="zip_code">Zip Code</string>
    <string name="emergency_contact">Emergency Contact</string>
    <string name="insurance_information">Insurance Information</string>
    <string name="collaterals">Collaterals</string>
    <string name="company_name">Company Name</string>
    <string name="policy_hash">Policy #</string>
    <string name="policy_type">Policy Type</string>
    <string name="policy_holder">Policy Holder</string>
    <string name="email">Email</string>
    <string name="phone1">Phone 1</string>
    <string name="phone2">Phone 2</string>
    <string name="forget_your_pass">Forgot your password?</string>
    <string name="error_internet_connect">Please Check Internet Connection!</string>
    <string name="error_enter_email">Please enter email</string>
    <string name="error_valid_email">Please enter valid email address</string>
    <string name="error_enter_pass">Please enter password</string>
    <string name="error_minimum_pass">Please enter minimum six characters for password</string>
    <string name="alert">Alert</string>
    <string name="email_pass_wrong">Email and Password do not match</string>
    <string name="error_enter_name">Please enter name</string>
    <string name="error_enter_confirm_pass">Please enter confirm password</string>
    <string name="error_minimum_confirm_pass">Please enter minimum six characters for confirm password</string>
    <string name="error_pass_match">Password and confirm password do not match</string>
    <string name="dummy_email">bricks@mailinator.com</string>
    <string name="dummy_password">password</string>
    <string name="select_state">Select State</string>
    <string name="last_seen">Last Seen</string>
    <string name="relationship">Relationship</string>
    <string name="fax_no">Fax Number</string>
    <string name="phone">Phone</string>
    <string name="company">Company</string>
    <string name="name">Name</string>
    <string name="additional_info">Additional Info</string>
    <string name="personal">Personal</string>
    <string name="congratus_purchase">Congratulations! Your Plan Purchase have been successfully</string>
    <string name="failed_purchase">Failed to purchase</string>
    <string name="press_back_cancel_dialog">You have pressed back or canceled a dialog</string>
    <string name="item_already_owned">Item is already owned. Please click on restore to upgrade the app.</string>
    <string name="email_enter_is_available">Email enter is already available</string>
    <string name="patient_info">Patient Info</string>
    <string name="developmental_history">Development \nHistory</string>
    <string name="treatment_plan">Treatment \nPlan</string>
    <string name="notes">Notes</string>
    <string name="rx">RX</string>
    <string name="uploaded_document">Uploaded \nDocument</string>
    <string name="psychotherapy_note">Psychotherapy \nNotes</string>
    <string name="error_enter_first_name">Please enter first name</string>
    <string name="error_enter_last_name">Please enter last name</string>
    <string name="please_enter">Please enter %1$s</string>
    <string name="please_select">Please select %1$s</string>
    <string name="error_enter_middle_initial">Please enter middle initial</string>
    <string name="forget_pass">Forgot Password</string>
    <string name="cancel">Cancel</string>
    <string name="submit">Submit</string>
    <string name="profile">Profile</string>
    <string name="account">Account</string>
    <string name="signature">Signature</string>
    <string name="setting">Setting</string>
    <string name="note_used">Note Used</string>
    <string name="type_of_practice">Type of Practice</string>
    <string name="edit">Edit</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="send">Send</string>
    <string name="back_to">Back To</string>
    <string name="get_started">Get Started</string>
    <string name="early_history">Early History</string>
    <string name="early_history_conception_was">Conception: Was a conscious decision</string>
    <string name="early_history_pregnency">Pregnancy: Any health problems with mother</string>
    <string name="early_history_delivery">Delivery: Apgar score health of body</string>
    <string name="infancy">Infancy</string>
    <string name="baby_at_birth">Baby at birth?</string>
    <string name="first_three_month">First 3 Months?</string>
    <string name="feeding_problem">Feedig Problems?</string>
    <string name="nursed_age_wined">Nursed? Aged weened? Process of weening?</string>
    <string name="excessive_vomiting">Excessive vomiting?</string>
    <string name="excessive_crying">Excessive Crying?</string>
    <string name="colic_describe">Colic? Describe</string>
    <string name="other_problms">Other Problems/illness during first year? Second year?</string>
    <string name="anyphysical_problem">Anyphysicle problem of parents in child\'s first year? Second year?</string>
    <string name="postpartum_depression">Postpartum depression</string>
    <string name="did_child_or_any_family">Did child or any family member have an operation or been hospitalized since child\'s birth</string>
    <string name="enter_answer">Enter your Answer</string>
    <string name="medical_history">Medical History</string>
    <string name="other">Other</string>
    <string name="comment">Comment</string>
    <string name="child_tacken_medicine">Child taken any medications?</string>
    <string name="enter_text">Enter Text</string>
    <string name="trauma">Trauma: Has the child experienced any kind of trauma?</string>
    <string name="development_milestone">Development Milestones</string>
    <string name="age_which_the_following">Age at which the following milestone was reached</string>
    <string name="crawled">CRAWLED</string>
    <string name="walk_alone">WALK ALONE</string>
    <string name="knew_word">KNEW TEN WORDS</string>
    <string name="talked_sentences">TALKED IN SENTENCES</string>
    <string name="complete_training">COMOPLETED TOILET TRAINING</string>
    <string name="any_history_toilet">Any history of problems toilet training?</string>
    <string name="temper">Temper</string>
    <string name="age">AGE</string>
    <string name="frequency">FREQUENCY</string>
    <string name="how_intense">HOW INTENSE</string>
    <string name="how_were_handle">How were they handled by parents/adults?</string>
    <string name="child_care_early"><![CDATA[Child Care & Early School History]]></string>
    <string name="age_of_infant">AGE OF INFANT BOTH PARENT WENT BACK TO WORK</string>
    <string name="who_look_care">Who look care of the child? Describe setting. \nWhere you pleased?</string>
    <string name="list_care_of_child">List care of child until prescholl setting</string>
    <string name="preschool_name_school">Preschool: Name of school/child care</string>
    <string name="describe_setting">Describe Setting</string>
    <string name="how_did_the_child_do">How did the child do? Socially/Behaviorally</string>
    <string name="emotionally">Emotionally</string>
    <string name="cooperatively">Cooperatively</string>
    <string name="kingergarten">Kindergarten Name of school/child care</string>
    <string name="grades_one_three">Grades 1-3: Name of school/child care</string>
    <string name="has_the_child_had">Has the child had any separation from parents</string>
    <string name="habits">Habits</string>
    <string name="rate_following_problem">Rate the following problems</string>
    <string name="temper_tantrumps">Temper tantrums</string>
    <string name="aggression">Aggression</string>
    <string name="memory">Memory</string>
    <string name="anxiety">Anxiety</string>
    <string name="desobedience">Desobedience</string>
    <string name="stealing">Stealing</string>
    <string name="fighting">Fighting</string>
    <string name="eating">Eating</string>
    <string name="fine_moter_skill">Fine moter skills</string>
    <string name="quick_mood_changes">Quick mood changes</string>
    <string name="accident_prone">Accident prone</string>
    <string name="language">Language</string>
    <string name="easily_frustrated">Easily frustrated</string>
    <string name="attention_span">Attention span</string>
    <string name="fears">Fears</string>
    <string name="interrupts_adults">Interrupts adults</string>
    <string name="describe_typicle_day">Describe a typical day in the child\'s life</string>
    <string name="does_the_child_have">Does the child have 2 or 3 close friend in parents class setting? Do they visit one another\'s homes? How often?</string>
    <string name="save_and_sing">Save and Sign</string>
    <string name="success">Success</string>
    <string name="sign_your_name">Sign your name here</string>
    <string name="reset">Reset</string>
    <string name="email_not_found">Email not found</string>
    <string name="title_activity_main_activity_ch">MainActivityCh</string>
    <string name="add_notes">Add Notes</string>
    <string name="initial_intake_report">Initial Intake Report</string>
    <string name="patient_name">Patient Name</string>
    <string name="date_of_intake">Date of Intake Session</string>
    <string name="marital_status">Marital Status</string>
    <string name="occupation_source_of_income">Occupation/Source of income</string>
    <string name="living_arrangement">Living Arrangement</string>
    <string name="best_way_to_contact">Best Way To Contact</string>
    <string name="referal_source">Referral Source</string>
    <string name="brief_description_of_client">Brief Desription of Client</string>
    <string name="presenting_issue">Presenting Issue</string>
    <string name="history_presenting_difficulties">History of Presenting Difficulties</string>
    <string name="significant_medical_history">Significant Medical History</string>
    <string name="therapist_observation">Therapist\'s Observations</string>
    <string name="diagnosis">Diagnosis</string>
    <string name="recommendations_and_preliminary">Recommendations and Preliminary Treatment Plan</string>
    <string name="describe_of_treatment">Description of Treatment contract and informed Consent/Additional Comments</string>
    <string name="mental_status_exam">Mental Status Exam</string>
</resources>