<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/activity_horizontal_margin">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/habits"
                    android:textAppearance="?android:textAppearanceLarge"
                    android:textColor="@color/colorPrimary"
                    app:font="@{`medium`}" />

            </RelativeLayout>

            <EditText
                android:id="@+id/edtBabyBirth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorEdittextTint"
                android:drawablePadding="@dimen/ten_margin"
                android:hint="@string/rate_following_problem"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:singleLine="true"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="@color/colorLable"
                android:textColorHint="@color/colorHint"
                app:font="@{`medium`}" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:drawablePadding="@dimen/ten_margin"
                android:textAppearance="?android:textAppearanceSmall"
                android:drawableRight="@drawable/ic_drop_down_light_grey"
                android:text="@string/temper_tantrumps"
                app:font="@{`medium`}" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/ten_margin"
                android:background="@color/colorEdittextTint" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:drawablePadding="@dimen/ten_margin"
                android:textAppearance="?android:textAppearanceSmall"
                android:drawableRight="@drawable/ic_drop_down_light_grey"
                android:text="@string/aggression"
                app:font="@{`medium`}" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/ten_margin"
                android:background="@color/colorEdittextTint" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:drawablePadding="@dimen/ten_margin"
                android:textAppearance="?android:textAppearanceSmall"
                android:drawableRight="@drawable/ic_drop_down_light_grey"
                android:text="@string/memory"
                app:font="@{`medium`}" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/ten_margin"
                android:background="@color/colorEdittextTint" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:drawablePadding="@dimen/ten_margin"
                android:textAppearance="?android:textAppearanceSmall"
                android:drawableRight="@drawable/ic_drop_down_light_grey"
                android:text="@string/anxiety"
                app:font="@{`medium`}" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/ten_margin"
                android:background="@color/colorEdittextTint" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:drawablePadding="@dimen/ten_margin"
                android:textAppearance="?android:textAppearanceSmall"
                android:drawableRight="@drawable/ic_drop_down_light_grey"
                android:text="@string/desobedience"
                app:font="@{`medium`}" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/ten_margin"
                android:background="@color/colorEdittextTint" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:drawablePadding="@dimen/ten_margin"
                android:textAppearance="?android:textAppearanceSmall"
                android:drawableRight="@drawable/ic_drop_down_light_grey"
                android:text="@string/stealing"
                app:font="@{`medium`}" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/ten_margin"
                android:background="@color/colorEdittextTint" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:drawablePadding="@dimen/ten_margin"
                android:textAppearance="?android:textAppearanceSmall"
                android:drawableRight="@drawable/ic_drop_down_light_grey"
                android:text="@string/fighting"
                app:font="@{`medium`}" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/ten_margin"
                android:background="@color/colorEdittextTint" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:drawablePadding="@dimen/ten_margin"
                android:textAppearance="?android:textAppearanceSmall"
                android:drawableRight="@drawable/ic_drop_down_light_grey"
                android:text="@string/eating"
                app:font="@{`medium`}" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/ten_margin"
                android:background="@color/colorEdittextTint" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:drawablePadding="@dimen/ten_margin"
                android:textAppearance="?android:textAppearanceSmall"
                android:drawableRight="@drawable/ic_drop_down_light_grey"
                android:text="@string/fine_moter_skill"
                app:font="@{`medium`}" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/ten_margin"
                android:background="@color/colorEdittextTint" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:drawablePadding="@dimen/ten_margin"
                android:textAppearance="?android:textAppearanceSmall"
                android:drawableRight="@drawable/ic_drop_down_light_grey"
                android:text="@string/quick_mood_changes"
                app:font="@{`medium`}" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/ten_margin"
                android:background="@color/colorEdittextTint" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:drawablePadding="@dimen/ten_margin"
                android:textAppearance="?android:textAppearanceSmall"
                android:drawableRight="@drawable/ic_drop_down_light_grey"
                android:text="@string/accident_prone"
                app:font="@{`medium`}" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/ten_margin"
                android:background="@color/colorEdittextTint" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:drawablePadding="@dimen/ten_margin"
                android:textAppearance="?android:textAppearanceSmall"
                android:drawableRight="@drawable/ic_drop_down_light_grey"
                android:text="@string/language"
                app:font="@{`medium`}" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/ten_margin"
                android:background="@color/colorEdittextTint" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:drawablePadding="@dimen/ten_margin"
                android:textAppearance="?android:textAppearanceSmall"
                android:drawableRight="@drawable/ic_drop_down_light_grey"
                android:text="@string/easily_frustrated"
                app:font="@{`medium`}" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/ten_margin"
                android:background="@color/colorEdittextTint" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:drawablePadding="@dimen/ten_margin"
                android:textAppearance="?android:textAppearanceSmall"
                android:drawableRight="@drawable/ic_drop_down_light_grey"
                android:text="@string/attention_span"
                app:font="@{`medium`}" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/ten_margin"
                android:background="@color/colorEdittextTint" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:drawablePadding="@dimen/ten_margin"
                android:textAppearance="?android:textAppearanceSmall"
                android:drawableRight="@drawable/ic_drop_down_light_grey"
                android:text="@string/fears"
                app:font="@{`medium`}" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/ten_margin"
                android:background="@color/colorEdittextTint" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:drawablePadding="@dimen/ten_margin"
                android:textAppearance="?android:textAppearanceSmall"
                android:drawableRight="@drawable/ic_drop_down_light_grey"
                android:text="@string/interrupts_adults"
                app:font="@{`medium`}" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/ten_margin"
                android:background="@color/colorEdittextTint" />

            <EditText
                android:id="@+id/edtDescibeTypical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorEdittextTint"
                android:drawablePadding="@dimen/ten_margin"
                android:hint="@string/describe_typicle_day"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:singleLine="true"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="@color/colorLable"
                android:textColorHint="@color/colorHint"
                app:font="@{`medium`}" />

            <EditText
                android:id="@+id/edtDoesChildHave"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorEdittextTint"
                android:drawablePadding="@dimen/ten_margin"
                android:hint="@string/does_the_child_have"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:singleLine="true"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="@color/colorLable"
                android:textColorHint="@color/colorHint"
                app:font="@{`medium`}" />

            <LinearLayout
                android:id="@+id/linSave"
                android:layout_width="match_parent"
                android:gravity="center"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:orientation="horizontal"
                android:padding="@dimen/ten_margin"
                android:background="@drawable/btn_selector_round_blue"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/ten_margin"
                    android:src="@drawable/ic_done_white"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAllCaps="true"
                    android:text="@string/save_and_sing"
                    android:textAppearance="?android:textAppearanceLarge"
                    android:textColor="@color/colorPlanText"
                    app:font="@{`bold`}"
                    />

            </LinearLayout>


        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

</layout>
