<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_search"
        android:icon="@drawable/ic_search"
        android:title="@string/search"
        android:visible="true"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_add_notes"
        android:icon="@drawable/ic_plus"
        android:title="@string/add_notes"
        android:visible="true"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_done_initial_notes"
        android:icon="@drawable/ic_done_white"
        android:title="@string/done"
        android:visible="false"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_done_mental_notes"
        android:icon="@drawable/ic_done_white"
        android:title="@string/done"
        android:visible="false"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_done_progress_notes"
        android:icon="@drawable/ic_done_white"
        android:title="@string/done"
        android:visible="false"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_done_psychotherapy_notes"
        android:icon="@drawable/ic_done_white"
        android:title="@string/done"
        android:visible="false"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_done_sope_notes"
        android:icon="@drawable/ic_done_white"
        android:title="@string/done"
        android:visible="false"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_done_play_assessment_notes"
        android:icon="@drawable/ic_done_white"
        android:title="@string/done"
        android:visible="false"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_done_sandtray_notes"
        android:icon="@drawable/ic_done_white"
        android:title="@string/done"
        android:visible="false"
        app:showAsAction="ifRoom" />

</menu>
